@@ -79,6 +79,10 @@ VP 10.0.0 Changelog
   -> due to the new lighting and materials the orientation of vertex normals on imported primitives is now extremely important!
      to test if everything is correct, try to tone down the environment emission scale and see if your objects are correctly lit from above
 
+- images/textures transparency is now -only- based on the alpha channel of the loaded images, no transparency color/hack support anymore
+
+- EM Reels do not feature Text/Font input anymore, only Images (this was already unsupported in 9.9.X, but now officially discarded)
+
 - internal DMD (access via script, input levels are 0..100)
   to display the DMD, use a TextBox with the magic keyword "DMD" as text
   to be able to connect to VPM, use a recent VPM and also core.vbs and follow the instructions there
@@ -92,6 +96,8 @@ VP 10.0.0 Changelog
 
 - Flasher supports custom shapes and multi texturing. You can define two separate images and define a filter to blend these two images.
   look into the CommandReference.txt for additional changes to the functions that can be used
+
+- Remove old shadowing code
 
 - support primitive vertex sizes > 65535
 
